# manta-project

./: Cargo.toml  release-plz.toml
.github/workflows/: release.yaml  shared_jobs.yaml  test-build-crates.yml
crates/csm-rs/: CHANGELOG.md  Cargo.toml
crates/manta/: CHANGELOG.md  Cargo.toml  config.toml  manta.rb
crates/manta-backend-dispatcher/: Cargo.toml
crates/manta-ws/: CHANGELOG.md  Cargo.lock.bak  Cargo.toml  Dockerfile
crates/manta-ws/src/: error.rs
crates/manta/src/: main.rs
crates/manta/src/cli/: mod.rs
crates/ochami-rs/: Cargo.toml  LICENSE  README.md  cacert.pem  config.toml
crates/ochami-rs/src/: authentication.rs  backend.rs  backend_connector.rs  error.rs  lib.rs  main.rs
crates/ochami-rs/src/backend_api/: authentication.rs  mod.rs
crates/ochami-rs/src/backend_api/bss/: http_client.rs  utils.rs
crates/ochami-rs/src/backend_api/hsm/defaults/node_map/: http_client.rs
crates/ochami-rs/src/backend_api/hsm/group/: hacks.rs  http_client.rs  mod.rs  types.rs  utils.rs
crates/ochami-rs/src/backend_api/hsm/inventory/ethernet_interfaces/: http_client.rs  types.rs
crates/ochami-rs/src/backend_api/hsm/inventory/hardware/: http_client.rs
crates/ochami-rs/src/backend_api/hsm/inventory/hardware_by_fru/: http_client.rs
crates/ochami-rs/src/backend_api/hsm/inventory/redfish_endpoint/: http_client.rs
crates/ochami-rs/src/backend_api/hsm/memberships/: http_client.rs
crates/ochami-rs/src/backend_api/hsm/partition/: http_client.rs  types.rs
crates/ochami-rs/src/backend_api/hsm/state/components/: http_client.rs
crates/ochami-rs/src/backend_api/node/: utils.rs
crates/ochami-rs/src/bss/: http_client.rs  types.rs  utils.rs
crates/ochami-rs/src/cli/: build_cli.rs  mod.rs  process_commands.rs
crates/ochami-rs/src/hsm/: mod.rs
crates/ochami-rs/src/hsm/component/: http_client.rs  types.rs
crates/ochami-rs/src/hsm/defaults/: mod.rs
crates/ochami-rs/src/hsm/defaults/node_map/: http_client.rs  types.rs
crates/ochami-rs/src/hsm/group/: hacks.rs  http_client.rs  tests.rs  types.rs  utils.rs
crates/ochami-rs/src/hsm/inventory/: mod.rs  types.rs
crates/ochami-rs/src/hsm/inventory/ethernet_interfaces/: http_client.rs  types.rs
crates/ochami-rs/src/hsm/inventory/hardware/: http_client.rs
crates/ochami-rs/src/hsm/inventory/hardware_by_fru/: http_client.rs
crates/ochami-rs/src/hsm/inventory/redfish_endpoint/: http_client.rs  types.rs
crates/ochami-rs/src/hsm/memberships/: http_client.rs
crates/ochami-rs/src/hsm/node_map/: http_client.rs  types.rs
crates/ochami-rs/src/hsm/partition/: http_client.rs  types.rs
crates/ochami-rs/src/hsm/state/: mod.rs
crates/ochami-rs/src/hsm/state/components/: http_client.rs  mod.rs  type_system.rs  types.rs
crates/ochami-rs/src/node/: utils.rs
crates/ochami-rs/src/pcs/power_cap/: http_client.rs
crates/ochami-rs/src/pcs/power_status/: http_client.rs  types.rs
crates/ochami-rs/src/pcs/transitions/: http_client.rs  types.rs
