[package]
authors = ["Manuel Sopena Ballesteros <msopena@cscs.ch>"]
name = "ochami-rs"
description = "Rust bindings for OCHAMI backend"
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"

[dependencies]
backend-dispatcher = { path = "../backend-dispatcher" } # Only for development purposes
# backend-dispatcher = "0.1.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6.1", default-features = false }
chrono = { version = "0.4.38", default-features = false }
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0.145", default-features = false }
serde_json = "1.0"
anyhow = { version = "1.0.44", default-features = false }
config = { version = "0.13.2", default-features = false }
toml_edit = "0.20.2"							# used to edit manta configuration file
log = "0.4.17"
log4rs = { version = "1.2.0", default-features = false }
dialoguer = { version = "0.11.0", default-features = false }
directories = "4.0.1"							# XDG Base Directory Specification
comfy-table = { version = "6.1.1", default-features = false }
clap = "4.5.7"
rustls = { version = "0.23.11", default-features = false }
rustls-pemfile = { version = "2.1.2", default-features = false }
base64 = { version = "0.22.1", default-features = false }
thiserror = "1.0.56"
dirs = "5.0.1"
jsonwebtoken = { version = "9.3.0", default-features = false }
regex = "1.6.0"
