[package]
authors = ["Manuel Sopena Ballesteros <msopena@cscs.ch>"]
name = "ochami-rs"
description = "Rust bindings for OCHAMI backend"
version = "0.1.53"
edition = "2021"
license-file = "LICENSE"
documentation = "https://github.com/OpenCHAMI/ochami-rs/blob/main/README.md"
homepage = "https://github.com/OpenCHAMI/ochami-rs/blob/main/README.md"
repository = "https://github.com/OpenCHAMI/ochami-rs"

[dependencies]
# backend-dispatcher = { path = "../backend-dispatcher" } # Only for development purposes
backend-dispatcher = "0.1.48"
strum = { version = "0.25.0", default-features = false }
strum_macros = "0.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6.1", default-features = false }
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0.145", default-features = false }
serde_json = "1.0"
log = "0.4.17"
thiserror = "1.0.56"
regex = "1.6.0"
hostlist-parser = "0.1.6"
futures = { version = "0.3.28", default-features = false }
serde_yaml = "0.9.17"
