[package]
authors = ["Manuel Sopena Ballesteros <msopena@cscs.ch>"]
name = "ochami-rs"
description = "Rust bindings for OCHAMI backend"
version = "0.1.81"
edition = "2021"
license-file = "LICENSE"
documentation = "https://github.com/OpenCHAMI/ochami-rs/blob/main/README.md"
homepage = "https://github.com/OpenCHAMI/ochami-rs/blob/main/README.md"
repository = "https://github.com/OpenCHAMI/ochami-rs"

[dependencies]
# manta-backend-dispatcher = { path = "../manta-backend-dispatcher" } # Only for development purposes
# manta-backend-dispatcher = { git = "https://github.com/eth-cscs/manta-backend-dispatcher", branch="feature/power-status" } # Only for development purposes
manta-backend-dispatcher = "0.1.84"
strum = { version = "0.27.1", default-features = false }
strum_macros = "0.27.1"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.17"
thiserror = "1.0.56"
regex = "1.6.0"
hostlist-parser = "0.1.6"
# futures = { version = "0.3.28", default-features = false }
futures-io = "0.3.31"
serde_yaml = "0.9.17"
tracing = "0.1.41"
